[imad-console] Updates ui/style.css

--- a/ui/style.css
+++ b/ui/style.css
@@ -1,16 +1,10 @@
-html{
-      background:https://s-media-cache-ak0.pinimg.com/avatars/niks2727_1440104512_140.jpg
- no-repeat center center fixed; 
-      -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
 
-}
 body {
     font-family: sans-serif;
     background-color: #795548;
     margin-top: 75px;
+            background-image:("https://s-media-cache-ak0.pinimg.com/avatars/niks2727_1440104512_140.jpg");
+
 }
 
 .center {
