[imad-console] Updates ui/style.css

--- a/ui/style.css
+++ b/ui/style.css
@@ -1,7 +1,7 @@
 
 body {
     font-family: sans-serif;
-    background-color: #795548;
+    background-image: url("https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcR9icALUsIenM7mboeC6w1h9bVmWys50iPzc4olcvTS7WhrbbRPPQ");
     margin-top: 75px;
 
 }
