--- a/ui/style.css
+++ b/ui/style.css
@@ -15,8 +15,13 @@ body {
 
 }
 
-.center {
+.right {
     text-align: center;
+        position: absolute;
+    right: 20px;
+    width: 200px;
+    height: 120px;
+
 }
 
 .text-big {
